--- a/utils/tsconfig.json
+++ b/utils/tsconfig.json
@@ -4,11 +4,10 @@
         "target": "es2020",
         "rootDir": "./src/", /* This is where you put the TypeScript source files. */
         "outDir": "./build/", /* This is where tsc will produce the output files. */
-        "module": "nodenext",
+        "module": "esnext",
         "esModuleInterop": true,
         "strict": true,
         "skipLibCheck": true,
-        "moduleResolution": "nodenext", /* see https://www.typescriptlang.org/docs/handbook/modules/theory.html#module-resolution */
         "declaration": true
     },
     "exclude": [
