--- a/utils/tsconfig.json
+++ b/utils/tsconfig.json
@@ -4,7 +4,7 @@
         "target": "es2020",
         "rootDir": "./src/", /* This is where you put the TypeScript source files. */
         "outDir": "./build/", /* This is where tsc will produce the output files. */
-        "module": "esnext",
+        "module": "nodenext",
         "esModuleInterop": true,
         "strict": true,
         "skipLibCheck": true,
