Updated actions dependencies

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -14,12 +14,11 @@ jobs:
     name: Autograding
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v6
         with:
-          node-version: '22'
+          node-version: 'lts/*'
 
       - uses: education/autograding@v1
         if: github.actor != 'github-classroom[bot]'
